--- a/shop/ClientApp/src/app/error/error.component.html
+++ b/shop/ClientApp/src/app/error/error.component.html
@@ -1,3 +1,10 @@
-<div class="text-center">
-    <h1>404</h1>
+<div style="position: relative;">
+    <div class="text-center my-4">
+        <img src="assets/images/404.png" alt="404">
+    </div>
+    <div class="toMain">
+        <span>Страница не найдена</span>
+        <a class="btn btn-primary" [routerLink]="['/']">На главную</a>
+    </div>
 </div>
+
