--- a/shop/ClientApp/src/app/home/home.component.html
+++ b/shop/ClientApp/src/app/home/home.component.html
@@ -3,15 +3,13 @@
     <!-- search form: -->
     <form #searchForm="ngForm" (ngSubmit)="onClickSubmit(searchForm.value)">
       <div class="row  py-3 m-0" style="background-color: #0098d0;">
-
         <div class="col-6">
           <div class="input_with_Icon">
             <i class="fa fa-search" aria-hidden="true"></i>
-            <input type="search"  name="search" id="search" style="height: auto;"  ngModel class="form-control"
+            <input type="search" name="search" id="search" style="height: auto;" ngModel class="form-control"
               placeholder="{{adsTotalCount}} объявлений рядом">
           </div>
         </div>
-
         <div class="col-4 input_with_Icon px-0">
           <i class="fa fa-map-marker" aria-hidden="true"></i>
           <select name="city" id="city" style="height: 100%;" class="form-control" ngModel [(ngModel)]="cityId">
@@ -21,17 +19,13 @@
             </option>
           </select>
         </div>
-
-        <div class="col-2 input_with_Icon " >
+        <div class="col-2 input_with_Icon ">
           <i class="fa fa-search" style="color: white;" aria-hidden="true"></i>
           <input type="submit" value="Поиск" class="btn search_button">
         </div>
-        
       </div>
     </form>
-
-
-  
+    <!-- category -->
     <!-- this generates category row (4 in the row)-->
     <div *ngFor="let categoryArray of categoryArray_all">
       <div *ngFor="let category of categoryArray" class="category_item">
@@ -43,7 +37,7 @@
         </div>
       </div>
       <!-- this generates subcategory items for each category -->
-      <div *ngFor="let category of categoryArray" [hidden] = "ShowOrHide(category.categoryId)">
+      <div *ngFor="let category of categoryArray" [hidden]="ShowOrHide(category.categoryId)">
         <div class="p-4 my-3 list_of_Items">
           <i class="fa fa-chevron-right" aria-hidden="true"></i>
           <a [routerLink]="['/search', category.categoryId]">Смотреть все объявления</a>
@@ -59,27 +53,16 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
-
-
-
-
-
-
-
 <!-- vip ads: -->
 <div style="background-color: white;padding: 30px 0;">
   <div class="main_content">
     <h5>VIP-ОБЪЯВЛЕНИЯ</h5>
-
     <div class="row mx-0" style="justify-content: space-between;">
       <div *ngFor="let item of ads" class="ads card">
         <a [routerLink]="['/details', item.adId]">
-          <img
-            src="{{exampleImage}}"
-            class="card-img-top">
+          <img src="{{exampleImage}}" class="card-img-top">
         </a>
         <div class="card-body py-1 px-2">
           <div>
@@ -92,9 +75,5 @@
         </div>
       </div>
     </div>
-
-    
-
-
   </div>
 </div>
