--- a/shop/ClientApp/src/app/search/search.component.html
+++ b/shop/ClientApp/src/app/search/search.component.html
@@ -1,31 +1,29 @@
-<div  class="toTop" (click)="toTop()"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
+<div class="toTop" (click)="toTop()"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
 <div class="main_content">
     <form #searchForm="ngForm" (ngSubmit)="onClickSubmit(searchForm.value)">
         <div class="row py-1">
-
             <div class="col-4">
                 <div class="input_with_Icon">
                     <i class="fa fa-search" aria-hidden="true"></i>
-                    <input type="search" style="height: auto;" class="form-control" placeholder="Новый поиск..." name="search" id="search" ngModel>
+                    <input type="search" style="height: auto;" class="form-control" placeholder="Новый поиск..."
+                        name="search" id="search" ngModel>
                 </div>
             </div>
-
             <div class="col-4 px-0">
                 <div class="input_with_Icon">
                     <i class="fa fa-map-marker" aria-hidden="true"></i>
-
-                    <select style="height: auto;"  class="form-control" id="city" name="city" ngModel [(ngModel)]="cityId"> 
+                    <select style="height: auto;" class="form-control" id="city" name="city" ngModel
+                        [(ngModel)]="cityId">
                         <option value="0">Вся Украина</option>
-                        <option *ngFor="let city of cities" value={{city.cityId}}> 
-                          {{city.name}}
+                        <option *ngFor="let city of cities" value={{city.cityId}}>
+                            {{city.name}}
                         </option>
-                      </select> 
-
+                    </select>
                 </div>
             </div>
-
             <div class="col-4">
-                <select id="category" name="category" (change)="filterCategories()" ngModel style="height: 100%;" class="form-control" [(ngModel)]="categoryId">
+                <select id="category" name="category" (change)="filterCategories()" ngModel style="height: 100%;"
+                    class="form-control" [(ngModel)]="categoryId">
                     <option value="0">Все категории</option>
                     <option *ngFor="let cat of Categories" value={{cat.categoryId}}>
                         {{cat.name}}
@@ -35,48 +33,44 @@
         </div>
         <div class="row" style="justify-content: flex-end;height: 100%;">
             <div class="col-4">
-                <select id="subCategory" name="subCategory" ngModel class="form-control" [(ngModel)]="subCategoryId" >
+                <select id="subCategory" name="subCategory" ngModel class="form-control" [(ngModel)]="subCategoryId">
                     <option value="0">Все подкатегории</option>
-                    <option *ngFor="let sub of _subCategories"  value={{sub.subCategoryId}}>
+                    <option *ngFor="let sub of _subCategories" value={{sub.subCategoryId}}>
                         {{sub.name}}
                     </option>
                 </select>
             </div>
         </div>
-            
-
-           
         <div class="row mt-3 mx-0">
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input"  >
+                <input type="checkbox" class="custom-control-input">
                 <label class="custom-control-label" for="searchTitleDesc">Искать в заголовке и описании</label>
             </div>
             <div class="custom-control custom-checkbox mx-5">
-                <input type="checkbox" class="custom-control-input" >
+                <input type="checkbox" class="custom-control-input">
                 <label class="custom-control-label" for="searchWithPhoto">Только с фото</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" >
+                <input type="checkbox" class="custom-control-input">
                 <label class="custom-control-label" for="SearchWithDelivery">Товары с доставкой</label>
             </div>
         </div>
         <div class="mt-3">
             <div class="mb-2 col-3 px-0">
-                <input type="number"  class="form-control" placeholder="Цена от (грн.)" value="-1" name="priceMin" id="priceMin" ngModel>
+                <input type="number" class="form-control" placeholder="Цена от (грн.)" value="-1" name="priceMin"
+                    id="priceMin" ngModel>
             </div>
             <div class="col-3 px-0">
-                <input type="number" class="form-control" placeholder="Цена до (грн.)" value="-1" name="priceMax" id="priceMax" ngModel>
+                <input type="number" class="form-control" placeholder="Цена до (грн.)" value="-1" name="priceMax"
+                    id="priceMax" ngModel>
             </div>
         </div>
-        
-            <div class="row mt-3 mx-0" style="justify-content: flex-end;">
-                <div class="search_button_outline">
-                    <i class="fa fa-search" aria-hidden="true" ></i>
-                    <input type="submit" value="Найти" class="btn btn-outline-primary">
-                </div>
+        <div class="row mt-3 mx-0" style="justify-content: flex-end;">
+            <div class="search_button_outline">
+                <i class="fa fa-search" aria-hidden="true"></i>
+                <input type="submit" value="Найти" class="btn btn-outline-primary">
             </div>
-       
-        
+        </div>
         <div class="row mt-3">
             <div>
                 <a (click)="SearchByAscOrder()" class="btn btn_sort">Самые дешевые</a>
@@ -90,12 +84,10 @@
 <!-- results of search -->
 <div style="background-color: white;">
     <div class="main_content py-5">
-
         <div class="text-left mb-3">
             <h5>Обычные объявления</h5>
             <p style="color: gray;font-size: 14px;">Найдено {{ads.length}} объявлений</p>
         </div>
-
         <div *ngFor="let item of ads" class="card my-3">
             <div class="row no-gutters">
                 <div class="col-2">
@@ -104,11 +96,11 @@
                     </a>
                 </div>
                 <div class="col-10" style="position: relative;">
-                    <div class="p-2" >
+                    <div class="p-2">
                         <div class="row">
                             <div class="col-6">
-                                <a [routerLink]="['/details', item.adId]" style="font-size: 18px;" 
-                                class="card-title">{{item.title}}</a>
+                                <a [routerLink]="['/details', item.adId]" style="font-size: 18px;"
+                                    class="card-title">{{item.title}}</a>
                             </div>
                             <div class="col-6 text-right">
                                 <strong class="ad_price">{{item.price |  number: '2.' }} грн.</strong>
@@ -117,7 +109,7 @@
                         <div class="ad_cat_subcat">
                             <span> {{item.category.name}} - {{item.subCategory.name}}</span>
                         </div>
-                        <div class="ad_city" >
+                        <div class="ad_city">
                             <i class="fa fa-map-marker" aria-hidden="true"></i>
                             <span>{{item.city.name}}</span>
                             <i class="fa fa-clock-o" aria-hidden="true"></i>
