--- a/shop/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/shop/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -4,7 +4,7 @@
       <div class="headerContainer">
         <div>
           <a [routerLink]="['/']">
-            <img class="mainLogo" src="{{mainLogoSvg}}"> 
+            <img class="mainLogo" src="assets/images/logo.svg"> 
           </a>
         </div>
         <div>
