--- a/shop/ClientApp/src/app/search/search.component.html
+++ b/shop/ClientApp/src/app/search/search.component.html
@@ -82,7 +82,7 @@
             <h5>Обычные объявления</h5>
             <p style="color: gray;font-size: 14px;">Найдено {{ads.length}} объявлений</p>
         </div>
-        <div *ngFor="let item of ads" class="card my-3">
+        <div *ngFor="let item of _ads" class="card my-3">
             <div class="row no-gutters">
                 <div class="col-2">
                     <a [routerLink]="['/details', item.adId]">
@@ -111,6 +111,12 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div (click)="AddMoreResults()" *ngIf="_ads.length < ads.length" class="showMore">
+            <span>Показать еще</span>
+            <div>
+                <i class="fa fa-refresh" aria-hidden="true"></i>
             </div>
         </div>
     </div>
