--- a/shop/ClientApp/src/app/details/details.component.html
+++ b/shop/ClientApp/src/app/details/details.component.html
@@ -8,7 +8,7 @@
         <div class="row mx-0">
             <div class="col-8 mb-3" style="background-color: white;">
                 <div class="text-center">
-                    <img src="{{exampleImage}}">
+                    <img style="height: 450px;" src="assets/images/ImageForAd-vertical.png">
                 </div>
                 <div class="my-4">
                     <p class="details_title">{{ad.title}}</p>
@@ -35,7 +35,7 @@
                 </a>
                 <div class="sellerName">
                     <div>
-                        <img src="{{exampleProfileImage}}">
+                        <img src="assets/images/profileImage.jpg">
                     </div>
                     <span>{{ad.contactPerson}}</span>
                     <small>на OLX с нояб. 2015</small>
