--- a/shop/ClientApp/src/app/home/home.component.html
+++ b/shop/ClientApp/src/app/home/home.component.html
@@ -62,7 +62,7 @@
     <div class="row mx-0" style="justify-content: space-between;">
       <div *ngFor="let item of ads" class="ads card">
         <a [routerLink]="['/details', item.adId]">
-          <img src="{{exampleImage}}" class="card-img-top">
+          <img src="assets/images/imageForAd.jpg" class="card-img-top">
         </a>
         <div class="card-body py-1 px-2">
           <div>
