--- a/shop/ClientApp/src/app/search/search.component.html
+++ b/shop/ClientApp/src/app/search/search.component.html
@@ -86,7 +86,7 @@
             <div class="row no-gutters">
                 <div class="col-2">
                     <a [routerLink]="['/details', item.adId]">
-                        <img style="width: 100%;" src="{{imageExample}}" class="card-img">
+                        <img style="height: 120px;" src="assets/images/imageForAd.jpg" class="card-img">
                     </a>
                 </div>
                 <div class="col-10" style="position: relative;">
